<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh_packages"
        android:icon="@drawable/ic_refresh_24"
        android:title="@string/refresh_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_not_installed"
        android:checkable="true"
        android:title="@string/show_not_installed_packages"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_system_apps"
        android:checkable="true"
        android:title="@string/show_system_apps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore_defaults"
        android:title="@string/restore_defaults_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme"
        android:title="@string/theme_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />

</menu>
